# Uniscan

./: .gitignore  .gitmodules  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
rules/core/semgrep/: unity_core_semgrep.yaml
src/uniscan/: __init__.py  cli.py  main.py  rules.py  scanner.py  semgrep_runner.py  severity.py
src/usentinel/: cli.py  main.py  scanner.py
src/usentinel/templates/: __init__.py  report.html
tests/: conftest.py  test_cli_args.py  test_cli_contract.py  test_main.py  test_main_engine_flag.py  test_rules_loader.py  test_scanner_engine.py  test_scanner_semgrep.py  test_semgrep_comment_filtering.py
tests/fixtures/clean_project/Assets/Scripts/: SafeBehaviour.cs
tests/fixtures/multi_match_project/Assets/Scripts/: MultiMatch.cs
tests/fixtures/risky_project/Assets/Scripts/: UnsafeBehaviour.cs
tests/fixtures/semgrep_comment_ignore/: active_matches.cs  comment_only.cs
tests/fixtures/semgrep_comment_ignore/comment_rules/: autorun.yaml  binary.yaml
tests/fixtures/semgrep_generator/: expected.yaml  spec.yaml
tools/: __init__.py
tools/semgrep/: __init__.py  generate_autorun_editor_hooks.py
tools/semgrep/data/: autorun_editor_hooks.yaml
