[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uniscan"
version = "0.1.0"
description = "A lightweight CLI tool to audit Unity projects for risky code and binaries."
readme = "docs/README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "semgrep>=1.72.0",
    "PyYAML>=6.0",
]

[project.scripts]
uniscan = "uniscan.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that invoke CLI end to end",
]
